--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <h1>Lista de Curosos de Programação da Alura</h1>
+    <h2>Curso recomendados para você!</h2>
 </head>
 <body>
     <li>Cursos de Alura</li>
