Adicionando na lista a Lista de Integração

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <li>Cursos de Alura</li>
     <li>Integração da tecnologia</li>
     <li>Programação em Csharp</li>
+    <li>Lista de Integração Contínua</li>
 </body>
 </html>
