Mudando Curso da Alura para Programadores

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Lista de Cursos da Alura</h1>
 </head>
 <body>
-    <li>Cursos de Alura</li>
+    <li>Cursos de Alura para Programadores</li>
     <li>Integração da Computação: Pelo terminal</li>
     <li>Programação em Csharp</li>
     <li>Lista de Integração Contínua</li>
