Adicionando o curso de MySql para programdores avançados

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li>Cursos de Alura para Programadores</li>
     <li>Integração da Computação: Pelo terminal</li>
     <li>Programação em Csharp</li>
+    <li>Curso de MySql para pessoas avançadas</li>
     <li>Lista de Integração Contínua</li>
 </body>
 </html>
