Aterando o nome do curso Lista de Intereção Continua

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <li>Cursos de Alura para Programadores</li>
     <li>Integração da Computação: Pelo terminal</li>
     <li>Programação em Csharp</li>
-    <li>Lista de Integração Contínua</li>
+    <li>Lista de Integração Contínua para os programadores</li>
 </body>
 </html>
